that took a long time

--- a/projects/dactylknight/index.html
+++ b/projects/dactylknight/index.html
@@ -18,7 +18,7 @@
   </head><body>
     <h2>The Dactyl Knight</h2>
     <p>—「0X://Explanation」<br>
-    Wii and stickers equal (exposed gamecube ports) a prettier wii.
+    Dacctyl Manuform and two 3d printed figures.
     </p>
       <p><a id="back" href="https://relivesight.com/projects/">back a page</a></p>
 
