--- a/projects/deskless/index.html
+++ b/projects/deskless/index.html
@@ -1,49 +1,45 @@
-
 <!DOCTYPE html>
 <html>
-  <head>
+  
+<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../../css/style.css" rel="stylesheet" type="text/css" media="all">
+    <link href="../../css/text-page.css" rel="stylesheet" type="text/css" media="all">
     <title>「ｒｅ：Ｌｉｖｅ」</title>
     <link rel="icon" type="image/png" href="../../images/home/pupilpng.png" sizes="1000x1000" />
-    <link href="entry.css" rel="stylesheet" type="text/css" media="all">
-    <style>
-    body {
-      background: url(uhhh.png) top left repeat;
-      background-size: 76.4%;
-    }
-    </style>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123647555-2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123647555-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'UA-123647555-2');
+    </script>
+  </head><body>
+    <h2>Deskless</h2>
+    <p>—「0X://Explanation」<br>
+    Deskless setup - keyboard - trackball - tripod
+    </p>
+      <p><a id="back" href="https://relivesight.com/projects/">back a page</a></p>
 
-  gtag('config', 'UA-123647555-2');
-</script>
-  </head>
-  <body>
-  <div id="page">
-    <div id="content_container">
+   
+      <img src="../../images/projects/deskless/5.jpg" width="400px">
+      <p>(p.s. not my legs)</p>
+      <h1>Beginnings</h1>
+      <p>reddit, where all good inspiration starts (besides p*nterest but we don't talk about that.)
+      i saw a post by u/HardAsMagnets, and immediately i knew i needed one.
+      i will not be documenting my personal process, instead check out Martin Körner's guide, which i followed to a T:</p>
+      <p><a href="https://stenoblog.com/georgi-stand-with-trackball/" target="_blank">> Martin Körners Guide <</a></p>
+      <h1>Pics</h1>
+      <p><img src="../../images/projects/deskless/2.jpg" width="400px"></p>
+      <p><img src="../../images/projects/deskless/1.jpg" width="400px"></p>
 
-      <div id="content">
 
-        <div class="main">
-                <br><h2>Deskless Kbd-Mouse</h2><br><br>
-                <img src="../../images/projects/deskless/5.jpg" width="400px"><br><br>
-                <p>(p.s. not my legs)</p><br>
-                <h1>Beginnings</h1><br>
-                <p>reddit, where all good inspiration starts (besides p*nterest but we don't talk about that.)
-                i saw a post by u/HardAsMagnets, and immediately i knew i needed one.
-                i will not be documenting my personal process, instead check out Martin Körner's guide, which i followed to a T:</p>
-                <p><a href="https://stenoblog.com/georgi-stand-with-trackball/" target="_blank">> Martin Körners Guide <</a></p>
-                <br><h1>Pics</h1><br>
-                <br><p><img src="../../images/projects/deskless/2.jpg" width="400px"></p><br>
-                <br><p><img src="../../images/projects/deskless/1.jpg" width="400px"></p><br>
-        </div>
-      </div>
-    </div>
-  </div>
+<br>
+   <p><a id="back" href="https://relivesight.com/projects/">back a page</a></p>
+   <p>┈ ren ​♡</p>
+
+
   </body>
+
 </html>
