--- a/projects/tokyocherry/index.html
+++ b/projects/tokyocherry/index.html
@@ -1,42 +1,39 @@
-
 <!DOCTYPE html>
 <html>
-  <head>
+  
+<head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="../../css/style.css" rel="stylesheet" type="text/css" media="all">
+    <link href="../../css/text-page.css" rel="stylesheet" type="text/css" media="all">
     <title>「ｒｅ：Ｌｉｖｅ」</title>
     <link rel="icon" type="image/png" href="../../images/home/pupilpng.png" sizes="1000x1000" />
-    <link href="entry.css" rel="stylesheet" type="text/css" media="all">
-    <style>
-    body {
-      background: url(uhhh.png) top left repeat;
-      background-size: 76.4%;
-    }
-    </style>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-123647555-2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-123647555-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'UA-123647555-2');
+    </script>
+  </head><body>
+    <h2>Tokyo Cherry</h2>
+    <p>—「0X://Explanation」<br>
+    Literally gmk sets are sooooo overrated.
+    </p>
+      <p><a id="back" href="https://relivesight.com/projects/">back a page</a></p>
 
-  gtag('config', 'UA-123647555-2');
-</script>
-  </head>
-  <body>
-  <div id="page">
-    <div id="content_container">
+     
+      <h1>Pics</h1>
+      <p><img src="../../images/projects/tokyocherry/1.jpeg" width="600px"></p>
+                <p><img src="../../images/projects/tokyocherry/2.jpeg" width="600px"></p>
 
-      <div id="content">
 
-        <div class="main">
-                <br><h2>Tokyo Cherry</h2><br><br>
-                <br><h1>Pics</h1><br>
-                <br><p><img src="../../images/projects/tokyocherry/1.jpeg" width="600px"></p><br>
-                <br><p><img src="../../images/projects/tokyocherry/2.jpeg" width="600px"></p><br>
-        </div>
-      </div>
-    </div>
-  </div>
+
+<br>
+   <p><a id="back" href="https://relivesight.com/projects/">back a page</a></p>
+   <p>┈ ren ​♡</p>
+
+
   </body>
+
 </html>
