--- a/projects/index.html
+++ b/projects/index.html
@@ -64,6 +64,26 @@
 								</div>
 						</div>
 
+
+						<div id="content">
+							<img class="auditorium" src="https://drive.google.com/uc?export=view&id=1Fo-p2UQHlek3wDVF_TrLNV7h4AdiMW_-" style="width: 250px;"/>
+							<h3 style="float: right; right: 4px;">Box Miku</h3>
+							<p>1 day</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								i had these prints sitting around forever and had to get them painted, im still not so good at painting huh
+								</li>
+								<li class='rr'>Status: [Completed]</li>
+								
+							</ol>
+						
+							<div class="label">
+								<p><a href="/projects/boxmiku">Read More</a></p>
+							</div>
+						</div>
+
+
+
 						<div id="content">
 							<img class="auditorium" src="../images/projects/wiitea/1.png" style="width: 250px;"/>
 							<h3 style="float: right; right: 4px;">WiiTea</h3>
@@ -81,6 +101,8 @@
 								<p><a href="/projects/wiitea">Read More</a></p>
 							</div>
 						</div>
+
+
 
 						<div id="content">
 							<img class="auditorium" src="../images/projects/smore/1.png" style="width: 250px;"/>
