--- a/daily/index.html
+++ b/daily/index.html
@@ -20,10 +20,48 @@
 
     <h2>Logs ┈ N≡Days</h2>
     <p>—「0X://Explanation」<br>
-      The logs of my semi-day-to-week life. A newly updated aesthetic :: Old can be found Here: <a target="_blank" href="https://relivesight.com/daily/old/">old log style</a>.
-      Here i log the actual happenings of my life, thanks!~  
+      The logs of my semi-day-to-week life. A newly updated aesthetic #702720... This will hopefully keep me accountable and you partially entertained.
+      Here i log the happenings of my life (more related to projects and such, not wether or not i had strawberries today), thanks!~  
       </p>
       <p><a id="back" href="https://relivesight.com/">back home</a></p>
+
+
+
+
+      <h1>07.30.20 ┈ Solar-Day: N≡﹤0021﹥</h1>
+      <p>—「01://Website」<br>
+      First of all, i didn't really mention it in the last log but when i did that "overhaul" of the site css and aesthetic, i literally changed
+      about 70 pages, which even tho the changes were quite minor it was alot of work lol. i would continue here to talk about the page techincally "added"
+      yesterday, but that is also technically a hardware thing so look forward to it in the next section.   
+     <br>
+      </p>
+  
+  <p>—「02://Hardware」<br>
+      update on the projects!!
+      <ul>
+        <li>rc128bm - <strike>failed but not logged</strike> <a href="https://relivesight.com/projects/mikuyboard/" target="_blank">COMPLETED BABY~</a></li>
+        <li><strike>box miku</strike> - she is <a href="https://relivesight.com/projects/boxmiku/" target="_blank">here</a> and wants the world </li>
+        <li>karambit - cs:comingsoon</li>
+        <li>split keyboard(x2) - still waiting</li>
+      </ul>
+      the rc128bm is finally finished. the project is known as <a href="https://relivesight.com/projects/mikuyboard/" target="_blank">mikuyboard</a> now.
+      it was quite a journey, please check out the semi-lengthy writeup, i tried a new writeup style too. box miku was finished as well, i guess all my projects are miku related rn huh.
+      <br>
+   </p>
+  
+  <p>—「03://Alternate-Reality-Media」<br>
+ i wish i had an update full of tangible information, but in reality i just had a fairly good brainstorming session. look forward to more soon hopefully. no promises tho heh.
+ jk jk ill definitely have some real stuff soon. im just planning the first <strike>episode</strike> 3min video.
+   <br></p>
+    
+  
+     <p>—「Jams of the day」<br>My Chemical Romance - You Know What They Do to Guys Like Us in Prison<br></p>
+     <p>┈ ren ​♡</p>
+  
+
+
+
+
 
 
 
