--- a/projects/index.html
+++ b/projects/index.html
@@ -66,6 +66,27 @@
 
 
 						<div id="content">
+							<img class="auditorium" src="https://drive.google.com/uc?export=view&id=1IZKzzICk7MhDz9HBHyKkf4XpKc5sfK7p" style="width: 250px;"/>
+							<h3 style="float: right; right: 4px;">Mikuyboard</h3>
+							<p>8 months</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								quite the journey for this one, was more work than it may have been worth, but i still love it!~
+								</li>
+								<li class='rr'>Status: [Completed]</li>
+								
+							</ol>
+						
+							<div class="label">
+								<p><a href="/projects/mikuyboard">Read More</a></p>
+							</div>
+						</div>
+
+
+
+
+
+						<div id="content">
 							<img class="auditorium" src="https://drive.google.com/uc?export=view&id=1Fo-p2UQHlek3wDVF_TrLNV7h4AdiMW_-" style="width: 250px;"/>
 							<h3 style="float: right; right: 4px;">Box Miku</h3>
 							<p>1 day</p>
