--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
       <img class="logo" style="width:500px;" src="images/home/tumble.png" />
 			<img class="logo" src="images/home/ddd.webp" />
       <div class="row imgPixel">
-<p>feel free to leave a note in the guest-book while you're here!</p>
+<!--<p>feel free to leave a note in the guest-book while you're here!</p>-->
+<p>partially under construction right now! please mind any issues~</p>
 <p class="text-center">┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺​♡༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈
   <a href="/daily" class="navi" ><img src="images/nav/flow.png">most recently updated page: daily <img src="images/nav/flow.png"></a>
   ┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈∞✧༺​♡༻✧∞┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈┈</p>
