--- a/daily/index.html
+++ b/daily/index.html
@@ -39,7 +39,7 @@
   <p>—「02://Hardware」<br>
       update on the projects!!
       <ul>
-        <li>rc128bm - <strike>failed but not logged</strike> <a href="https://relivesight.com/projects/mikuyboard/" target="_blank">COMPLETED BABY~</a></li>
+        <li><strike>rc128bm</strike>- <strike>failed but not logged</strike> <a href="https://relivesight.com/projects/mikuyboard/" target="_blank">COMPLETED BABY~</a></li>
         <li><strike>box miku</strike> - she is <a href="https://relivesight.com/projects/boxmiku/" target="_blank">here</a> and wants the world </li>
         <li>karambit - cs:comingsoon</li>
         <li>split keyboard(x2) - still waiting</li>
