--- a/daily/index.html
+++ b/daily/index.html
@@ -21,7 +21,7 @@
     <h2>Logs ┈ N≡Days</h2>
     <p>—「0X://Explanation」<br>
       The logs of my semi-day-to-week life. A newly updated aesthetic #702720... This will hopefully keep me accountable and you partially entertained.
-      Here i log the happenings of my life (more related to projects and such, not wether or not i had strawberries today), thanks!~  
+      Here i log the happenings of my life (more related to projects and such, not whether or not i had strawberries today), thanks!~  
       </p>
       <p><a id="back" href="https://relivesight.com/">back home</a></p>
 
