--- a/projects/index.html
+++ b/projects/index.html
@@ -65,6 +65,28 @@
 						</div>
 
 
+
+						<div id="content">
+							<img class="auditorium" src="https://drive.google.com/uc?export=view&id=1tIqHrrI2PGF2jSGPR2ZV4GpkF_2ibrVp" style="width: 250px;"/>
+							<h3 style="float: right; right: 4px;">Karambit</h3>
+							<p>2 days</p>
+							<ol class="playlist_info">
+								<li class="rr">
+								i simply wanted to make a csgo knife prop, nothing more than that~ i learned about properly painting with acrylics, oops
+								</li>
+								<li class='rr'>Status: [Completed]</li>
+								
+							</ol>
+						
+							<div class="label">
+								<p><a href="/projects/karambit">Read More</a></p>
+							</div>
+						</div>						
+
+
+
+
+
 						<div id="content">
 							<img class="auditorium" src="https://drive.google.com/uc?export=view&id=1IZKzzICk7MhDz9HBHyKkf4XpKc5sfK7p" style="width: 250px;"/>
 							<h3 style="float: right; right: 4px;">Mikuyboard</h3>
