--- a/daily/index.html
+++ b/daily/index.html
@@ -27,6 +27,41 @@
 
 
 
+      <h1>08.12.20 ┈ Solar-Day: N≡﹤0022﹥</h1>
+      <p>—「01://Website」<br>
+      World Of Warcraft did days go by!, i started this post 8 days ago, but here we are today. Either way i felt like i had to do something for the site today,
+      so i wrote a <a href="https://relivesight.com/reference/ds3mod/" target="_blank">tutorial for randomizing ds3</a> since that was something i did over my blog absence. Its
+      absolutely joyfully horrendous and i highly recommend if you have completeled Dark Souls 3. 
+      I also added my twitch to my <a href="https://relivesight.com/bio/" target="_blank">bio</a>.
+      I will return to working on the website, predominantly the parts that don't involve me, since i want to expand this from a personal blog to a more functional site for others.
+      Though i can't gurauntee the rate at which progress proceeds, considering i start college relatively soon. However, i will try my best!~
+     <br>
+      </p>
+  
+  <p>—「02://Hardware」<br>
+      update on the projects!!
+      <ul>
+        <li><strike>karambit</strike> - <a href="https://relivesight.com/projects/karambit/" target="_blank">all done</a></li>
+        <li>split keyboard(x2) - significant breakthroughs in programming them (using linux)</li>
+        <li>omega split(???) - the biggest keyboard ive ever built??? more info coming soon</li>
+      </ul>
+      finished the karambit, and now i gotta finish the splits, wish me luck~ <br>
+   </p>
+  
+  <p>—「03://Alternate-Reality-Media」<br>
+The first episode is released, you can catch it here: <a href="https://www.youtube.com/watch?v=zwKOcKnzc98" target="_blank">Analog United - Employment Advert, May 1982</a><br>
+and i'll be starting work on episode two today, hopefully it gets done relatively quickly. That's all for today!~</p>
+    
+  
+     <p>—「Jams of the day」<br>King Gizzard & The Lizard Wizard - Trapdoor, Robot Stop, Evil Death Roll<br></p>
+     <p>┈ ren ​♡</p>
+  
+
+
+
+
+
+
 
       <h1>07.30.20 ┈ Solar-Day: N≡﹤0021﹥</h1>
       <p>—「01://Website」<br>
