--- a/daily/test/testtwo/bruh.html
+++ b/daily/test/testtwo/bruh.html
@@ -9,7 +9,7 @@
       
       </head><body>
 <h1 style="margin-bottom:30px;">RE:LIVE</h1>
-<a href="#" onclick="toggle('navbar')">Toggle Navigation Bar</a>
+<a href="" onclick="toggle('navbar')">Toggle Navigation Bar</a>
 
   <ul id="navbar">
   <li><a href="http://target1.html">Link 1</a></li>
