--- a/daily/test/testtwo/bruh.html
+++ b/daily/test/testtwo/bruh.html
@@ -4,9 +4,9 @@
       
       </head><body>
 <h1 style="margin-bottom:30px;">RE:LIVE</h1>
-<a href="/bio" class="navi"><img src="images/nav/flow.png">Ongoing Projects</a>
+<a href="/bio" class="navi"><img src="images/nav/flow.png">Ongoing-----</a>
   <ul>
-  <li><a href="http://target1.html">bruh</a></li>
+  <li><a href="http://target1.html">bruh-----</a></li>
   <li><a href="http://target2.html">moment</a></li>
   <li><a href="http://target3.html">Link 3</a></li>
   <li><a href="http://target4.html">Link 4</a></li>
