--- a/daily/test/testtwo/index.html
+++ b/daily/test/testtwo/index.html
@@ -20,15 +20,16 @@
   </head><body>
 
     <div class="row rowRowFightThePower">
-    <div class="col-sm-12 col-md-3 contentLeft">
-     
-<div w3-include-html="https://relivesight.com/daily/test/testtwo/bruh.html"></div>
 
+<div class="harry">   
+<div class="col-sm-12 col-md-3 contentLeft">     
+<div w3-include-html="https://relivesight.com/daily/test/testtwo/bruh.html"></div>
 <script>
   w3.includeHTML();
   </script>
-
     </div>
+  </div>  
+
     <div class="col-sm-12 col-md-15 contentRight">
    <h2>Logs ┈ N≡Days</h2>
     <p>—「0X://Explanation」<br>
