--- a/daily/test/testtwo/bruh.html
+++ b/daily/test/testtwo/bruh.html
@@ -18,14 +18,15 @@
 <li><a href="http://target3.html">Link 3</a></li>
 <li><a href="http://target4.html">Link 4</a></li>
 </ul>
-<a href="/bio" class="navi"><img src="images/nav/flow.png">Ongoing----</a>
+<a href="/bio" class="navi">Ongoing----</a>
+<a href="/bio" class="navi"><img src="images/nav/flow.png">brtuh</a>
   <ul>
   <li><a href="http://target1.html">bruh-----</a></li>
   <li><a href="http://target2.html">moment</a></li>
   <li><a href="http://target3.html">Link 3</a></li>
   <li><a href="http://target4.html">Link 4</a></li>
   </ul>
-<a href="/bio" class="navi"><img src="images/nav/flow.png">Ongoing------</a>
+<a href="/bio" class="navi"><img src="images/nav/flow.png">Ongoin</a>
 <ul>
 <li><a href="http://target1.html">bruh-----</a></li>
 <li><a href="http://target2.html">moment</a></li>
