--- a/daily/test/testtwo/index.html
+++ b/daily/test/testtwo/index.html
@@ -18,7 +18,9 @@
     <script src="b.js"></script>
     <script src="https://www.w3schools.com/lib/w3.js"></script>
   </head><body>
-
+<br>
+    <img src="../../img/thatsinsane11.jpg" width=750px>
+    
     <div class="row rowRowFightThePower">
 
 <div class="harry">   
