--- a/re/bruh.html
+++ b/re/bruh.html
@@ -4,14 +4,9 @@
       
       </head><body>
 <h1 style="margin-bottom:1px;">RE:LIVE</h1>
-<a href="/bio" class="navi">Ongoing--------</a>
-<a href="/bio" class="navi">&nbsp;Game Dev</a>
-<a href="relivesight.com">⁍ Game Dev</a>
-<a href="relivesight.com">    Game Dev</a>
-<a href="relivesight.com"> Game Dev</a>
-<a class="ttyl" href="relivesight.com"> Game Dev</a>
+<a href="/bio" class="navi"><img src="images/nav/flow.png">Ongoing--------</a>
   <ul>
-  <li><a href="relivesight.com">Game Dev</a></li>
+  <li><a href="http://target1.html">Game Dev</a></li>
   <li><a href="http://target2.html">Massive Split</a></li>
   <li><a href="http://target3.html">Link 3</a></li>
   <li><a href="http://target4.html">Link 4</a></li>
