--- a/daily/test/testtwo/bruh.html
+++ b/daily/test/testtwo/bruh.html
@@ -5,13 +5,12 @@
       </head><body>
 <h1 style="margin-bottom:1px;">RE:LIVE</h1>
 <a href="/bio" class="navi">Ongoing--------</a>
-<a href="/bio" class="navi">&nbsp;Game Dev</a>
-<a href="relivesight.com">⁍ Game Dev</a>
-<a href="relivesight.com">    Game Dev</a>
-<a href="relivesight.com"> Game Dev</a>
-<a class="ttyl" href="relivesight.com"> Game Dev</a>
+<p>&nbsp;&nbsp;■<a href="/bio" class="navi">Game-Dev</a></p>
+<a href="/bio" class="navi">&nbsp;&nbsp;■-Game-Dev</a>
+<p>&nbsp;■<a href="/bio" class="navi">Game-Dev</a></p>
+<a href="/bio" class="navi">&nbsp;■-Game-Dev</a>
   <ul>
-  <li><a href="relivesight.com">Game Dev</a></li>
+  <li><a href="relivesight.com">Game-Dev</a></li>
   <li><a href="http://target2.html">Massive Split</a></li>
   <li><a href="http://target3.html">Link 3</a></li>
   <li><a href="http://target4.html">Link 4</a></li>
