--- a/daily/test/testtwo/bruh.html
+++ b/daily/test/testtwo/bruh.html
@@ -5,10 +5,10 @@
       </head><body>
 <h1 style="margin-bottom:1px;">RE:LIVE</h1>
 <a href="/bio" class="navi">Ongoing--------</a>
-<p>&nbsp;&nbsp;■<a href="/bio" class="navi">Game-Dev</a></p>
-<a href="/bio" class="navi">&nbsp;&nbsp;■-Game-Dev</a>
-<p>&nbsp;■<a href="/bio" class="navi">Game-Dev</a></p>
-<a href="/bio" class="navi">&nbsp;■-Game-Dev</a>
+<p>&nbsp;&nbsp;■<a href="/bio" class="navi">GameDev</a></p>
+<a href="/bio" class="navi">&nbsp;&nbsp;■-Gameddd</a>
+<p>&nbsp;■<a href="/bio" class="navi">Gfdsafdsafdsafdsa</a></p>
+<a href="/bio" class="navi">&nbsp;■-Gamfdsa</a>
   <ul>
   <li><a href="relivesight.com">Game-Dev</a></li>
   <li><a href="http://target2.html">Massive Split</a></li>
@@ -17,7 +17,7 @@
   </ul>
 <a href="/bio" class="navi"><img src="images/nav/flow.png">Completed-----</a>
 <ul>
-<li><a href="http://target1.html">bruh-----</a></li>
+<li><a href="http://target1.html">brufdsafdsafdsah-----</a></li>
 <li><a href="http://target2.html">moment</a></li>
 <li><a href="http://target3.html">Link 3</a></li>
 <li><a href="http://target4.html">Link 4</a></li>
