--- a/daily/test/testtwo/bruh.html
+++ b/daily/test/testtwo/bruh.html
@@ -4,11 +4,11 @@
       
       </head><body>
 <h1 style="margin-bottom:1px;">RE:LIVE</h1>
-<a href="/bio" class="navi">Ongoing--------</a>
-<p>&nbsp;&nbsp;■<a href="/bio" class="navi">GameDev</a></p>
-<a href="/bio" class="navi">&nbsp;&nbsp;■-Gameddd</a>
-<p>&nbsp;■<a href="/bio" class="navi">Gfdsafdsafdsafdsa</a></p>
-<a href="/bio" class="navi">&nbsp;■-Gamfdsa</a>
+<a href="/bio">Ongoing--------</a>
+<p>&nbsp;&nbsp;■<a href="/bio">GameDev</a></p>
+<a href="/bio">&nbsp;&nbsp;■-Gameddd</a>
+<p>&nbsp;■<a href="/bio">Gfdsafdsafdsafdsa</a></p>
+<a href="/bio">&nbsp;■-Gamfdsa</a>
   <ul>
   <li><a href="relivesight.com">Game-Dev</a></li>
   <li><a href="http://target2.html">Massive Split</a></li>
