--- a/daily/test/testtwo/bruh.html
+++ b/daily/test/testtwo/bruh.html
@@ -4,14 +4,14 @@
       
       </head><body>
 <h1 style="margin-bottom:1px;">RE:LIVE</h1>
-<a href="/bio" class="navi">Personal</a>
+<p>✿<a href="/bio" class="navi">Personal Info</a></p>
 <ul>
 <li><a href="http://target1.html">blog</a></li>
 <li><a href="http://target2.html">bio</a></li>
 <li><a href="http://target3.html">love</a></li>
 <li><a href="http://target4.html">lists</a></li>
 </ul>
-<a href="/bio">Reference</a>
+<a href="/bio">Reference Logs</a>
   <ul>
   <li><a href="http://target1.html">sites</a></li>
   <li><a href="http://target2.html">firmware</a></li>
@@ -19,9 +19,9 @@
   <li><a href="http://target4.html">flashing</a></li>
   <li><a href="http://target4.html">wii softmod</a></li>
   <li><a href="http://target4.html">encoding</a></li>
-  <li><a href="http://target4.html">ds3-randomizer</a></li>
+  <li><a href="http://target4.html">ds3 randomizer</a></li>
   </ul>
-<a href="/bio">Ongoing-Projects</a>
+<a href="/bio">Ongoing Projects</a>
   <ul>
   <li><a href="relivesight.com">Game-Dev</a></li>
   <li><a href="http://target2.html">Massive Split</a></li>
@@ -31,13 +31,12 @@
 
 <a href="/bio">Completed Projects</a>
 <ul>
-<li><a href="http://target1.html">brufdsafdsafdsah-----</a></li>
+<li><a href="http://target1.html">brufdsafds</a></li>
 <li><a href="http://target2.html">moment</a></li>
 <li><a href="http://target3.html">Link 3</a></li>
 <li><a href="http://target4.html">Link 4</a></li>
 </ul>
-<a href="/bio" class="navi">Study Logs</a>
-<a href="/bio" class="navi">brtuh</a>
+<a href="/bio">Study Logs</a>
   <ul>
   <li><a href="http://target1.html">bruh-----</a></li>
   <li><a href="http://target2.html">moment</a></li>
