--- a/daily/test/testtwo/bruh.html
+++ b/daily/test/testtwo/bruh.html
@@ -4,7 +4,7 @@
       
       </head><body>
 <h1 style="margin-bottom:1px;">RE:LIVE</h1>
-<p class="hhh">✿<a href="/bio">Personal Info</a></p>
+<a href="/bio">Personal Info</a>
 <ul>
 <li><a href="http://target1.html">blog</a></li>
 <li><a href="http://target2.html">bio</a></li>
