b,fld;sajmf,ld;sajkl;fdjsak.;lfj;;ldsa

--- a/daily/test/testtwo/bruh.html
+++ b/daily/test/testtwo/bruh.html
@@ -4,48 +4,61 @@
       
       </head><body>
 <h1 style="margin-bottom:4px;"><u>RE:LIVE</u></h1>
-<a href="/bio">Personal Info</a>
+<a style="margin-top :4px;" href="">Personal Info</a>
 <ul>
-<li><a href="http://target1.html">blog</a></li>
-<li><a href="http://target2.html">bio</a></li>
-<li><a href="http://target3.html">love</a></li>
-<li><a href="http://target4.html">lists</a></li>
+<li><a href="">blog</a></li>
+<li><a href="">bio</a></li>
+<li><a href="">love</a></li>
+<li><a href="">lists</a></li>
+<li><a href="">music</a></li>
 </ul>
-<a href="/bio">Reference Logs</a>
+<a href="">Reference Logs</a>
   <ul>
-  <li><a href="http://target1.html">sites</a></li>
-  <li><a href="http://target2.html">firmware</a></li>
-  <li><a href="http://target3.html">handwiring</a></li>
-  <li><a href="http://target4.html">flashing</a></li>
-  <li><a href="http://target4.html">wii softmod</a></li>
-  <li><a href="http://target4.html">encoding</a></li>
-  <li><a href="http://target4.html">ds3 randomizer</a></li>
+  <li><a href="">sites</a></li>
+  <li><a href="">firmware</a></li>
+  <li><a href="">handwiring</a></li>
+  <li><a href="">flashing</a></li>
+  <li><a href="">wii softmod</a></li>
+  <li><a href="">encoding</a></li>
+  <li><a href="">ds3 randomizer</a></li>
   </ul>
-<a href="/bio">Ongoing Projects</a>
+<a href="">Art</a>
   <ul>
-  <li><a href="relivesight.com">Game-Dev</a></li>
-  <li><a href="http://target2.html">Massive Split</a></li>
-  <li><a href="http://target3.html">Link 3</a></li>
-  <li><a href="http://target4.html">Link 4</a></li>
+  <li><a href="">manga</a></li>
+  <li><a href="">my art</a></li>
+  <li><a href="">spam</a></li>
+  </ul>
+<a href="">Ongoing Projects</a>
+  <ul>
+  <li><a href="">Game-Dev</a></li>
+  <li><a href="">Massive Split</a></li>
+  <li><a href="">Link 3</a></li>
+  <li><a href="">Link 4</a></li>
   </ul>
 
-<a href="/bio">Completed Projects</a>
+<a href="">Completed Projects</a>
 <ul>
-<li><a href="http://target1.html">brufdsafds</a></li>
-<li><a href="http://target2.html">moment</a></li>
-<li><a href="http://target3.html">Link 3</a></li>
-<li><a href="http://target4.html">Link 4</a></li>
+<li><a href="">brufdsafds</a></li>
+<li><a href="">moment</a></li>
+<li><a href="">Link 3</a></li>
+<li><a href="">Link 4</a></li>
 </ul>
-<a href="/bio">Study Logs</a>
+
+<a href="">Study Logs</a>
   <ul>
-  <li><a href="http://target1.html">bruh-----</a></li>
-  <li><a href="http://target2.html">moment</a></li>
-  <li><a href="http://target3.html">Link 3</a></li>
-  <li><a href="http://target4.html">Link 4</a></li>
+  <li><a href="">bruh-----</a></li>
+  <li><a href="">moment</a></li>
+  <li><a href="">Link 3</a></li>
+  <li><a href="">Link 4</a></li>
   </ul>
 
+<a href="">Code Logs</a>
+  <ul>
+  <li><a href="">bruh-----</a></li>
+  <li><a href="">moment</a></li>
+  <li><a href="">Link 3</a></li>
+  <li><a href="">Link 4</a></li>
+  </ul>
           
-<a href="/bio">&nbsp;&nbsp;■-Gameddd</a>
-<a href="/bio">&nbsp;■-Gamfdsa</a>         
  
     </body></html>
