--- a/daily/test/testtwo/bruh.html
+++ b/daily/test/testtwo/bruh.html
@@ -3,8 +3,8 @@
  
       
       </head><body>
-<h1 style="margin-bottom:4px;"><u>RE:LIVE</u></h1>
-<a style="margin-top :4px;" href="">Personal Info</a>
+<h1 style="margin-bottom:4px;"><u>RE:LIVE</u></h1><br>
+<a href="">Personal Info</a>
 <ul>
 <li><a href="">blog</a></li>
 <li><a href="">bio</a></li>
