--- a/daily/test/testtwo/bruh.html
+++ b/daily/test/testtwo/bruh.html
@@ -1,14 +1,12 @@
 <html>
   <head>
- 
-      
       </head><body>
-<h1 style="margin-bottom:4px;"><u>RE:LIVE</u></h1><br>
+<h1 style="margin-bottom:4px;">RE:LIVE</h1>
+<a>---------------</a>
 <a href="">Personal Info</a>
 <ul>
 <li><a href="">blog</a></li>
 <li><a href="">bio</a></li>
-<li><a href="">love</a></li>
 <li><a href="">lists</a></li>
 <li><a href="">music</a></li>
 </ul>
@@ -22,26 +20,57 @@
   <li><a href="">encoding</a></li>
   <li><a href="">ds3 randomizer</a></li>
   </ul>
-<a href="">Art</a>
+<a href="">Art Logs</a>
   <ul>
-  <li><a href="">manga</a></li>
+  <li><a href="https://relivesight.com/manga/">manga</a></li>
   <li><a href="">my art</a></li>
   <li><a href="">spam</a></li>
   </ul>
-<a href="">Ongoing Projects</a>
+<a href="https://relivesight.com/ongoing/">Ongoing Projects</a>
   <ul>
-  <li><a href="">Game-Dev</a></li>
-  <li><a href="">Massive Split</a></li>
-  <li><a href="">Link 3</a></li>
-  <li><a href="">Link 4</a></li>
+  <li><a href="">game dev</a></li>
+  <li><a href="">433% keyboard</a></li>
+  <li><a href="">crnkbd</a></li>
+  <li><a href=""><strike>cyberdeck</strike></a></li>
   </ul>
 
-<a href="">Completed Projects</a>
+<a href="https://relivesight.com/projects/">Completed Projects</a>
 <ul>
-<li><a href="">brufdsafds</a></li>
-<li><a href="">moment</a></li>
-<li><a href="">Link 3</a></li>
-<li><a href="">Link 4</a></li>
+<li><a href="https://relivesight.com/projects/karambit/">karambit</a></li>
+<li><a href="https://relivesight.com/projects/mikuyboard/">mikuyboard</a></li>
+<li><a href="https://relivesight.com/projects/boxmiku/">box miku</a></li>
+<li><a href="https://relivesight.com/projects/wiitea/">wii tea</a></li>
+<li><a href="https://relivesight.com/projects/smore/">s'more</a></li>
+<li><a href="https://relivesight.com/projects/2b/">2b</a></li>
+<li><a href="https://relivesight.com/projects/9s/">9s</a></li>
+<li><a href="https://relivesight.com/projects/dactylknight/">dactyl knight</a></li>
+<li><a href="https://relivesight.com/projects/elytra/">elytra</a></li>
+<li><a href="https://relivesight.com/projects/quarandream/">quarandream</a></li>
+<li><a href="https://relivesight.com/projects/compaqmx11800/">compaq mx11800</a></li>
+<li><a href="https://relivesight.com/projects/gergo/">gergo</a></li>
+<li><a href="https://relivesight.com/projects/navi10/">navi10</a></li>
+<li><a href="https://relivesight.com/projects/fc980c/">leopold fc980c</a></li>
+<li><a href="https://relivesight.com/projects/gh60/">gh60</a></li>
+<li><a href="https://relivesight.com/projects/ut472/">ut47.2</a></li>
+<li><a href="https://relivesight.com/projects/butterstick/">butterstick</a></li>
+<li><a href="https://relivesight.com/projects/keeblade/">keeblade</a></li>
+<li><a href="https://relivesight.com/projects/tofuhhkb/">tofu hhkb</a></li>
+<li><a href="https://relivesight.com/projects/steno/">steno</a></li>
+<li><a href="https://relivesight.com/projects/tokyocherry/">tokyo cherry</a></li>
+<li><a href="https://relivesight.com/projects/m122/">ibm m122</a></li>
+<li><a href="https://relivesight.com/projects/modelm/">ibm model m</a></li>
+<li><a href="https://relivesight.com/projects/marthl/">marthl</a></li>
+<li><a href="https://relivesight.com/projects/dz65rgb/">dz65 rgb</a></li>
+<li><a href="https://relivesight.com/projects/tarnish4t/">tarnish 4t</a></li>
+<li><a href="https://relivesight.com/projects/rbsli/">r/b sli</a></li>
+<li><a href="https://relivesight.com/projects/duckymiya/">ducky miya</a></li>
+<li><a href="https://relivesight.com/projects/duckymini/">ducky mini</a></li>
+<li><a href="https://relivesight.com/projects/fruitstwos/">fruits twos</a></li>
+<li><a href="https://relivesight.com/projects/hwmarble/">hw marble</a></li>
+<li><a href="https://relivesight.com/projects/ternduale/">tern duale</a></li>
+<li><a href="https://relivesight.com/projects/suitcase/">suitcase-pc</a></li>
+<li><a href="https://relivesight.com/projects/deskless/">deskless</a></li>
+<li><a href="https://relivesight.com/projects/numpad/">numpad</a></li>
 </ul>
 
 <a href="">Study Logs</a>
@@ -59,6 +88,4 @@
   <li><a href="">Link 3</a></li>
   <li><a href="">Link 4</a></li>
   </ul>
-          
- 
     </body></html>
