--- a/projects/index.html
+++ b/projects/index.html
@@ -528,7 +528,7 @@
 			<p>????</p>
 			<ol class="playlist_info">
 				<li class="rr">
-					Also ot this for a very good deal online, but it wasn't working when i got it. Also a little arduino
+					Also got this for a very good deal online, but it wasn't working when i got it. Also a little arduino
 					magic and some soarers converter and its also working now~
 					
 				</li>
